chore: update default button stylings

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         message: 'Hello from the host app!',
         buttonText: 'Click here!',
         size: 'md',        // Options: 'sm', 'md', 'lg', 'xl'
-        theme: 'danger',   // Options: 'primary', 'danger', 'success', 'warning'
-        rounded: 'xl'      // Options: 'none', 'sm', 'md', 'lg', 'xl'
+        theme: 'primary',   // Options: 'primary', 'danger', 'success', 'warning'
+        rounded: 'md'      // Options: 'none', 'sm', 'md', 'lg', 'xl'
       });
     });
   </script>
